fix wrap

--- a/main.css
+++ b/main.css
@@ -820,5 +820,8 @@ ul {
 	.blocks_info {
 		flex-wrap: wrap;
 	}
+	.blokks {
+		flex-wrap: wrap-reverse;
+	}
 
 }
